# MediaPlayer

./: .gitignore  CMakeLists.txt  README.md
aborted/: aborted_buffer.cpp  aborted_code.cpp
docs/: player.md
resources/pictures/ts/TS/wav/: 04 (transcribed on 07-Apr-2026 07-09-21).srt  05破壊的アクメ (transcribed on 07-Apr-2026 07-06-30).srt
resources/qss/: c_cpp_properties.json  favicon.rc  stylesheet1.qss  stylesheet2.qss  stylesheet3.qss
resources/scripts/: synthesis_script.py  translate_script.py
src/: CMakeLists.txt
src/ASR/: AudioTaskAsr.hpp
src/ASR/WhisperAsr/: WhisperAsr.cpp  WhisperAsr.hpp
src/FX/: AudioTaskFx.cpp  AudioTaskFx.hpp  AudioTaskInterface.hpp  FFmpegAudioTask.hpp
src/GUI/: ASR_Page.cpp  ASR_Page.hpp  TR_page.cpp  TR_page.hpp  TTS_page.cpp  TTS_page.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
src/IO/: AudioTaskSource.hpp
src/IO/sink/: AudioTaskPlaySink.hpp  WhisperQtSink.hpp
src/IO/sources/: FileSource.hpp
src/IO/sources/FileSource/: FFmpegFileSource.cpp  FFmpegFileSource.hpp
src/TR/LLM/: translate_script.cpp  translate_script.h  translate_script.py
src/TTS/: synthesis_script.cpp  synthesis_script.h  synthesis_script.py
src/VAD/: AudioTaskVad.cpp  AudioTaskVad.hpp  VadFrame.hpp  VadProcessor.cpp  VadProcessor.hpp
src/VAD/VadFrame/: WebRtcVadFrame.cpp  WebRtcVadFrame.hpp
src/app/: main.cpp
src/core/: AudioTask.h  AudioTaskBuffer.cpp  AudioTaskBuffer.h  AudioTaskBuffer.hpp  AudioTaskBufferStream.cpp  AudioTaskBufferStream.hpp  AudioTaskByteStream.cpp  AudioTaskByteStream.hpp  AudioTaskElement.cpp  AudioTaskElement.hpp  AudioTaskInterface.cpp  AudioTaskInterface.h  AudioTaskPad.cpp  AudioTaskPad.hpp  AudioTaskPipeline.cpp  AudioTaskPipeline.hpp  AudioTaskQueue.hpp  FFmpegAudioTask.cpp  FFmpegAudioTask.h  WhisperAudioTask.cpp  WhisperAudioTask.h
src/core/include/: AudioTaskByteStream.h  AudioTaskElement.h
src/gui/: MainWindow.cpp  audioplaypage.cpp  audioplaypage.h  audioplaythread.cpp  audioplaythread.h  delegateside.cpp  delegateside.h  filelistitem.cpp  filelistitem.h  filelistthread.cpp  filelistthread.h  filelistwidget.cpp  filelistwidget.h  filetreeitem.cpp  filetreeitem.h  filetreethread.cpp  filetreethread.h  filetreewidget.cpp  filetreewidget.h  filettreethread.cpp  filettreethread.h  itemsidelistwidget.cpp  itemsidelistwidget.h  main.cpp  mainwindow.h  mainwindow.ui  pagedisplay.cpp  pagedisplay.h  pagedisplay.ui  pagesynthesis.cpp  pagesynthesis.h  pagesynthesis.ui  pagetranscription.cpp  pagetranscription.h  pagetranscription.ui  pagetranslation.cpp  pagetranslation.h  pagetranslation.ui  resource.qrc  setting.h  (+17 more)
src/scripts/: translate_script.cpp  translate_script.h
src/utils/: srttimestamp.h
src/utils/python/translation/: translate.py  translate_test.py
tests/: CMakeLists.txt  test_audiotask.cpp  test_decoder.cpp  test_encoder.cpp  test_merge.cpp  test_merge2.cpp  test_scripts.cpp  test_synthesis.cpp  test_utils.cpp  test_whisper.cpp
tests/ASR/: test_whisper.cpp
tests/FX/: test_fx.cpp
tests/IO/sources/: FFmpegFileSourceTests.cpp
tests/TR/: test_translate.cpp
tests/VAD/: test_vad.cpp
tests/core/: test_buffer.cpp  test_stream.cpp
